# cyd-video

./: Cargo.toml  README.md
.github/workflows/: build.yml  ci.yml
.zed/: settings.json
cyd-encoder/: Cargo.toml
cyd-encoder/.cargo/: config.toml
cyd-encoder/src/: format.rs  lib.rs
cyd-encoder/src/format/: mjpeg.rs  rgb.rs  size_fps.rs  yuv.rs
cyd-player/: .clippy.toml  Cargo.toml
cyd-player/src/: display.rs  error.rs  lib.rs  sdcard.rs  touch.rs  video.rs
cyd-player/src/video/: decoder.rs  mjpeg.rs  rgb.rs  yuv.rs
cyd-video/: Cargo.toml
cyd-video/.zed/: settings.json
cyd-video/src/: display.rs  error.rs  video.rs
cyd-video/src/video/: mjpeg.rs
encoder/: Cargo.toml
encoder/cyd-encoder/: Cargo.toml
encoder/cyd-encoder/src/: encoder.rs  player.rs
encoder/cyd-format/: Cargo.toml
encoder/cyd-format/src/: lib.rs
src/: display.rs  error.rs  lib.rs  sdcard.rs  video.rs
