[package]
edition      = "2024"
name         = "cyd-video"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "cyd-video"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32", "log-04", "unstable"] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32", "log-04"] }
log                    = "0.4.27"

esp-backtrace = { version = "0.18.1", features = [
  "esp32",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.16.1", features = ["esp32", "log-04"] }

embedded-hal-bus = "0.3.0"
embedded-hal = "1.0.0"
display-interface-spi = "0.5.0"
ili9341 = "0.6.0"
embedded-graphics = "0.8.1"
display-interface = "0.5.0"
embedded-sdmmc = "0.9.0"
embedded-io = "0.7.1"

[lints.clippy]
# mem::forget is generally not safe to do with esp_hal types, especially those holding buffers for the duration of a data transfer.
mem_forget = "deny"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
