[package]
edition      = "2024"
name         = "cyd-player"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "cyd-video"
path = "./src/bin/main.rs"

[features]
default = ["log", "mjpeg"]
alloc = ["dep:esp-alloc"]
log = [
    "zune-jpeg?/log",
    "esp-hal/log-04",
    "esp-bootloader-esp-idf/log-04",
    "esp-println/log-04",
    "embedded-sdmmc/log"
]
mjpeg = ["dep:zune-jpeg", "alloc"]

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32", "unstable"] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32"] }
esp-alloc = { version = "0.9.0", optional = true }
log = "0.4.27"

esp-backtrace = { version = "0.18.1", features = [
  "esp32",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.16.1", features = ["esp32"] }

embedded-hal-bus = "0.3.0"
embedded-hal = "1.0.0"
display-interface-spi = "0.5.0"
ili9341 = "0.6.0"
embedded-graphics = "0.8.1"
display-interface = "0.5.0"
# XXX Custom embedded-sdmmc to avoid infinite recursion
# https://github.com/rust-embedded-community/embedded-sdmmc-rs/commit/a707d3094ea7c54e38d4e0e278e1a638bda62ba1
embedded-sdmmc = { git = "https://github.com/rust-embedded-community/embedded-sdmmc-rs.git", ref="7b13b7b", default-features = false }
embedded-io = "^0.6.1"  # match embedded-sdmmc
format_no_std = "1.2.0"
zune-jpeg = { version = "0.5.8", git = "https://github.com/etemesi254/zune-image.git", rev = "4063a17", default-features = false, optional = true }
cyd-encoder = { path = "../cyd-encoder", default-features = false }

[lints.clippy]
# mem::forget is generally not safe to do with esp_hal types, especially those holding buffers for the duration of a data transfer.
mem_forget = "deny"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
